# thufir

./: .coderabbit.yaml  .containerignore  .gitignore  AGENTS.md  Cargo.toml  Containerfile  Makefile  README.md  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml
podman/: .env.example  README.md  compose.yml
src/: config.rs  dashboard.rs  error.rs  lib.rs  main.rs  observability.rs  state.rs
src/commands/: mod.rs  ping.rs  trade_dashboard.rs
src/data_sources/: mod.rs  volumeleaders.rs
tests/: cli.rs
