[package]
name = "thufir"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[lints.rust]
unused = { level = "deny", priority = -1 }

[dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
poise = "0.6"
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
rusty-volumeleaders = { version = "0.7", default-features = false }
sentry = { version = "0.48", features = ["tracing"], optional = true }
serde = { version = "1", features = ["derive"] }
serenity = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = []
sentry = ["dep:sentry"]

[dev-dependencies]
assert_cmd = "2"
mockall = "0.13"
mockito = "1.7"
predicates = "3"
rusty-volumeleaders = { version = "0.7", default-features = false, features = ["test-support"] }
